--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
         <h1>NPS Park Finder</h1>
 
         <form id="js-form">
-            <label for="search-term">Enter state abbreviation:<br><span class="more-info">(To search for more than one state, separate state abbreviations by a comma.)</span></label>
+            <label for="js-search-term">Enter state abbreviation:<br><span class="more-info">(To search for more than one state, separate state abbreviations by a comma. For example: 'hi,ak')</span></label>
             <input type="text" name="search-term" id="js-search-term" class="form-style" required>
 
-            <label for="max-results">Maximum results to return:</label>
+            <label for="js-max-results">Maximum results to return:</label>
             <input type="number" class="form-style" name="max-results" id="js-max-results" value="10">
 
             <input type="submit" id="submit-button" class="form-style" value="Find Parks!">
@@ -27,7 +27,7 @@
         <p id="js-error-message" class="error-message"></p>
         <div class="results-container hidden">
           <h3>Results:</h3>
-          <section class="results-list"></section>
+          <div class="results-list"></div>
         </div>
     </div>
     <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
